tools/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: dev-grafana.rila.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
